@startuml Memotions ER Diagram

enum JournalStatus {
  ANALYZED
  PUBLISHED
  DRAFT
}

enum TransactionType {
  POSITIVE_EMOTION
  ACHIEVEMENT_BONUS
  STREAK_BONUS
  JOURNAL_ENTRY
}

entity AchievementTypes {
    * type : VARCHAR <<PK>>
}

entity Achievements {
    * id : INTEGER <<PK>>
    --
    code : VARCHAR
    name : VARCHAR
    icon_url : VARCHAR
    type : VARCHAR
    criteria : INTEGER
    description : VARCHAR
    tier : INTEGER
    points_awarded : INTEGER
}

entity EmotionAnalysis {
    * id : INTEGER <<PK>>
    --
    journal_id : INTEGER
    emotion : VARCHAR
    confidence : REAL
    analyzed_at : TIMESTAMP
}

entity EmotionClasses {
    * emotion : VARCHAR <<PK>>
}

entity JournalFeedbacks {
    * id : INTEGER <<PK>>
    --
    journal_id : INTEGER
    feedback : TEXT
    created_at : TIMESTAMP
}

entity JournalTags {
    * journal_id : INTEGER <<PK>>
    * tag_id : INTEGER <<PK>>
}

entity Journals {
    * id : INTEGER <<PK>>
    --
    user_id : INTEGER
    title : VARCHAR
    content : VARCHAR
    datetime : TIMESTAMP
    starred : BOOLEAN
    deleted : BOOLEAN
    status : JournalStatus
    created_at : TIMESTAMP
}

entity Levels {
    * level_number : INTEGER <<PK>>
    --
    points_required : INTEGER
}

entity PointTransactions {
    * id : INTEGER <<PK>>
    --
    user_id : INTEGER
    type : TransactionType
    points : INTEGER
    created_at : TIMESTAMP
}

entity StreakCategories {
    * category : VARCHAR <<PK>>
}

entity Streaks {
    * id : INTEGER <<PK>>
    --
    user_id : INTEGER
    category : VARCHAR
    start_date : DATE
    end_date : DATE
}

entity Tags {
    * id : INTEGER <<PK>>
    --
    name : VARCHAR
    user_id : INTEGER
}

entity UserAchievements {
    * user_id : INTEGER <<PK>>
    * achievement_id : INTEGER <<PK>>
    --
    completed_at : TIMESTAMP
}

entity UserLevels {
    * user_id : INTEGER <<PK>>
    * level_id : INTEGER <<PK>>
}

entity Users {
    * id : INTEGER <<PK>>
    --
    name : VARCHAR
    email : VARCHAR
    password : VARCHAR
    fcm_token : VARCHAR
}

AchievementTypes ||--o{ Achievements
Achievements ||--o{ UserAchievements
Achievements ||--o{ EmotionAnalysis

EmotionClasses ||--o{ EmotionAnalysis

Journals ||--o{ JournalFeedbacks
Journals ||--o{ JournalTags
Journals ||--o{ EmotionAnalysis

Tags ||--o{ JournalTags

Users ||--o{ Journals
Users ||--o{ Tags
Users ||--o{ PointTransactions
Users ||--o{ Streaks
Users ||--o{ UserAchievements
Users ||--o{ UserLevels

Levels ||--o{ UserLevels

StreakCategories ||--o{ Streaks

JournalStatus ||--o{ Journals
TransactionType ||--o{ PointTransactions

@enduml
